# Mochi

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml
hardware/: bom.md
hardware/cad/: README.md  lib.scad  mochi.scad  params.scad
src/mochi/: __init__.py  app.py  config.py  constants.py
src/mochi/brain/: __init__.py  client.py
src/mochi/face/: __init__.py  engine.py
src/mochi/voice/: __init__.py  audio.py  console.py  pipeline.py  sounds.py  stt.py  tts.py
tests/: test_audio.py  test_brain.py  test_face.py  test_pipeline.py
